	+ CirculinearCurve2D.getLength(): computes total length of the curve
	+ CirculinearCurve2D.getLength(double): converts position to length
	+ CirculinearCurve2D.getPosition(double): converts length to position
- added getLeftTangent() and getRightTangent() methods in ContinuousCurve2D
	
Bug fixes
- fixed drawing of polycurves
- fixed bug in intersecting circle arc and line

Regressions
- Ring2D renamed to LinearRing2D

Code
- splitted CurveSet2D (for future interface) and CurveArray2D (default
	implementation of CurveSet2D)
- introduced AbstractContinuousCurve and AbstractSmothCurve to reduce code
	copies
- normalized toString() methods of simple curves	
	
	
javaGeom-0.7.1 (2009-04-24, rev. 198)

bug fixes
- fixed bug in intersecting circle arc and line
- added static builders for PolyBezierCurve2D
- update class names in spline package
- added accessors in Ellipse2D and EllipseArc2D
- added Hyperbola2D.getAsymptotes()
- fixed bug in HyperbolaBranch2D
- fixed clipping of Empty CurveSet2D
- Point2D.clip now returns an instance of PointSet2D
- fixed bug in Line2D.


javaGeom-0.7.0 (2009-02-17, rev. 192)

New features
- Added Convex hull by Graham scan
- Added point package, which contains point set implementations, and the
	interface PointShape2D.
- Added KDTree2D
- Conic2D now implements Boundary2D
- added Angle2D.getPseudoAngle();

Regressions
- Shape2D does not inherit from java.awt.Shape anymore, reducing the number of
	methods for most classes
- removed useless classes:
	+ Disc2D, ParametricConic2D, HalfPlane2D
- removed obsolete methods:
	+ Polygon2D.getVerticesNumber()
	+ PointSet2D.getPointsNumber()
	+ Conic2D.getCartesianEquation()
	+ Transform2D.transform(Point2D, Point2D) -> Point will become immutable
- deprecated classes with doubtful use:
	+ empty shapes
	+ Point2D.INFINITY_POINT

Code
- moved Polylines into polygon package, and renamed 'ClosedPolyline2D' as
    'Ring2D'
- moved PointSet2D into point package